--- a/css/index.css
+++ b/css/index.css
@@ -59,22 +59,39 @@ cursor: pointer;
 .red {background-color: #f44336;} /* Red */
 .gray {background-color: #e7e7e7; color: black;} /* Gray */
 .black {background-color: #555555;} /* Black */
-/*
-input {
-margin-top: 1rem;
+
+/*custom inpu file*/
+.custom-file-input {
+color: transparent;
+
 }
-input::file-selector-button {
-font-weight: bold;
-color: black;
-padding: 0.5em;
-border: thin solid grey;
-border-radius: 3px;
+.custom-file-input::-webkit-file-upload-button {
+visibility: hidden;
 }
-input[type="file"]::file-selector-button:hover {
-background-color: #fff;
-border: thin solid grey;
+
+.custom-file-input::before {
+content: "▲ Upload Foto";
+color: #fff;
+display: inline-block;
+background: #555555;
+padding: 10px 22px;
+outline: none;
+white-space: nowrap;
+-webkit-user-select: none;
+cursor: pointer;
+font-weight: 400;
+border-radius: 0.5em;
+outline: none;
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
-*/
+.custom-file-input:focus {
+outline: none !important;
+
+}
+.custom-file-input:active::before {
+transform: scale(.9) translate(0px, 2px);
+box-shadow:  inset 4px 4px 5px 0px rgba(0, 0, 0, 0.20);
+}
 
 *::selection {
 background: #e91e63;
