--- a/css/index.css
+++ b/css/index.css
@@ -88,6 +88,7 @@ font-weight: 400;
 border-radius: 0.5em;
 outline: none;
 margin: 4px 2px;
+font-family: Courier, monospace;
 box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 .custom-file-input:focus {
