--- a/css/index.css
+++ b/css/index.css
@@ -85,6 +85,7 @@ white-space: nowrap;
 -webkit-user-select: none;
 cursor: pointer;
 font-weight: 400;
+font-size: 16px;
 border-radius: 0.5em;
 outline: none;
 margin: 4px 2px;
