--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,10 @@ margin: 4px 2px;
 transition-duration: 0.4s;
 cursor: pointer;
 }   
-
+.btn:hover {
+background-color: #fff;
+color: black;
+}
 canvas {
 width: 100%;
 height: auto;
