--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,152 @@ table tr:nth-child(odd) th {
 .post-date {
   color: #9a9a9a;
 }
+
+.btn {
+background-color: #008CBA;
+border: none;
+border-radius: 0.5em;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+transition-duration: 0.4s;
+cursor: pointer;
+}   
+.btn:hover {
+background-color: #e7e7e7;
+color: black;
+}
+canvas {
+width: 100%;
+height: auto;
+}
+
+img {
+width: 100%;
+height: auto;
+top: 0px;
+left: 0px;
+}
+
+button {
+background-color: #f44336; /* Green */
+border: none;
+border-radius: 0.5em;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+transition-duration: 0.4s;
+cursor: pointer;
+}
+
+.green {background-color: #04AA6D;} /* Green */
+.blue {background-color: #008CBA;} /* Blue */
+.red {background-color: #f44336;font-family: Courier, monospace;} /* Red */
+.red:hover {background-color: #e7e7e7;color: black;}
+.gray {background-color: #e7e7e7; color: black;} /* Gray */
+.black {background-color: #555555;} /* Black */
+
+/*custom inpu file*/
+.custom-file-input {
+color: transparent;
+}
+.custom-file-input::-webkit-file-upload-button {
+visibility: hidden;
+}
+.custom-file-input::before {
+content: "⛰️ UPLOAD FOTO";
+color: #fff;
+display: inline-block;
+background: #555555;
+padding: 15px 32px;
+outline: none;
+white-space: nowrap;
+-webkit-user-select: none;
+cursor: pointer;
+font-weight: 400;
+font-size: 16px;
+border-radius: 0.5em;
+outline: none;
+margin: 4px 2px;
+font-family: Courier, monospace;
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+}
+.custom-file-input:focus {
+outline: none !important;
+}
+.custom-file-input:active::before {
+transform: scale(.9) translate(0px, 2px);
+box-shadow:  inset 4px 4px 5px 0px rgba(0, 0, 0, 0.20);
+}
+
+*::selection {
+background: #e91e63;
+color: #fff;
+}
+*::-moz-selection {
+background: #e91e63;
+color: #fff;
+}
+
+.copyright {
+position: fixed;
+right: 15px;
+bottom: 15px;
+font-family: "Roboto";
+}
+.copyright span {
+line-height: 36px;
+color: thin solid grey;
+margin-right: 10px;
+font-weight: 300;
+}
+.copyright span a {
+font-weight: 400;
+text-decoration: none;
+color: #ea4c89;
+}
+.copyright .posterwall {
+width: 30px;
+height: 30px;
+display: block;
+background: url("https://avatars.githubusercontent.com/u/135429317?v=4");
+background-size: cover;
+border-radius: 50%;
+border: thin solid grey;
+float: right;
+}
+
+#preloader {
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #fff;
+/* change if the mask should have another color then white */
+z-index: 99;
+/* makes sure it stays on top */
+}
+#status {
+width: 200px;
+height: 200px;
+position: absolute;
+left: 50%;
+/* centers the loading animation horizontally one the screen */
+top: 50%;
+/* centers the loading animation vertically one the screen */
+background-image: url(https://posterwall.netlify.app/assets/img/status.gif);
+/* path to your loading animation */
+background-repeat: no-repeat;
+background-position: center;
+margin: -100px 0 0 -100px;
+/* is width and height divided by two */
+}
