--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,40 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+html {
+display: grid;
+min-height: 100%
+}
+body {
+display: grid
+}
+.container {
+position: relative;
+overflow: hidden;
+width: 600px;
+margin: 5em auto;
+padding: 2em;
+}
+footer {
+position: absolute;
+bottom: 0;
+right: 0;
+text-transform: uppercase;
+padding: 10px;
+font-family: Lato,sans-serif
+}
+footer p {
+letter-spacing: 3px;
+font-size: 10px
+}
+footer a {
+color: #aaa;
+text-decoration: none
+}
+footer a:hover{
+color: #7d7d7d
+}
+@media (max-width: 700px) {
+.container {
+margin: 0 auto;
+width: auto;
+}
+}
