--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,42 @@ text-decoration: none
 footer a:hover{
 color: #7d7d7d
 }
+
+/* INPUT */
+/*custom inpu file*/
+.custom-file-input {
+color: transparent;
+
+}
+.custom-file-input::-webkit-file-upload-button {
+visibility: hidden;
+}
+
+.custom-file-input::before {
+content: "▲ Upload Foto";
+color: #fff;
+display: inline-block;
+background: #555555;
+padding: 10px 22px;
+outline: none;
+white-space: nowrap;
+-webkit-user-select: none;
+cursor: pointer;
+font-weight: 400;
+border-radius: 0.5em;
+outline: none;
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+}
+.custom-file-input:focus {
+outline: none !important;
+
+}
+.custom-file-input:active::before {
+transform: scale(.9) translate(0px, 2px);
+box-shadow:  inset 4px 4px 5px 0px rgba(0, 0, 0, 0.20);
+	   
+}
+
 @media (max-width: 700px) {
 .container {
 margin: 0 auto;
