--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,19 @@ footer a:hover{
 color: #7d7d7d
 }
 
+/* CANVAS */
+canvas {
+width: 100%;
+height: auto;
+}
+/* IMAGE */
+img {
+width: 100%;
+height: auto;
+top: 0px;
+left: 0px;
+}
+
 /* INPUT */
 /*custom inpu file*/
 .custom-file-input {
