--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,33 @@ transform: scale(.9) translate(0px, 2px);
 box-shadow:  inset 4px 4px 5px 0px rgba(0, 0, 0, 0.20);
 	   
 }
+/* LOADING */
+#preloader {
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #fff;
+/* change if the mask should have another color then white */
+z-index: 99;
+/* makes sure it stays on top */
+}
+#status {
+width: 200px;
+height: 200px;
+position: absolute;
+left: 50%;
+/* centers the loading animation horizontally one the screen */
+top: 50%;
+/* centers the loading animation vertically one the screen */
+background-image: url(https://posterwall.netlify.app/assets/img/status.gif);
+/* path to your loading animation */
+background-repeat: no-repeat;
+background-position: center;
+margin: -100px 0 0 -100px;
+/* is width and height divided by two */
+}
 
 @media (max-width: 700px) {
 .container {
