--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,18 @@ margin: -100px 0 0 -100px;
 /* is width and height divided by two */
 }
 /* BUTTON */
+button {
+background-color: #04AA6D; /* Green */
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+}
 
 @media (max-width: 700px) {
 .container {
