--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,11 @@ font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
 }
-
+.green {background-color: #04AA6D;} /* Green */
+.blue {background-color: #008CBA;} /* Blue */
+.red {background-color: #f44336;} /* Red */
+.gray {background-color: #e7e7e7; color: black;} /* Gray */
+.black {background-color: #555555;} /* Black */
 @media (max-width: 700px) {
 .container {
 margin: 0 auto;
