--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,10 @@ font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
 }
+.btn:active::before {
+transform: scale(.9) translate(0px, 2px);
+box-shadow:  inset 4px 4px 5px 0px rgba(0, 0, 0, 0.20);	   
+}
 button {
 background-color: #04AA6D; /* Green */
 border: none;
