--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,9 @@ cursor: pointer;
 transform: scale(.9) translate(0px, 2px);
 box-shadow:  inset 4px 4px 5px 0px rgba(0, 0, 0, 0.20);	   
 }
+.btn:focus {
+outline: none !important;
+}
 button {
 background-color: #04AA6D; /* Green */
 border: none;
