--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ cursor: pointer;
 }
 .green {background-color: #04AA6D;} /* Green */
 .blue {background-color: #008CBA;} /* Blue */
-.red {background-color: #f44336;font-family: Lato,sans-serif} /* Red */
+.red {background-color: #f44336;font-family: Lato,sans-serif;} /* Red */
 .gray {background-color: #e7e7e7; color: black;} /* Gray */
 .black {background-color: #555555;} /* Black */
 @media (max-width: 700px) {
