--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,7 @@ border-radius: 0.5em;
 color: white;
 padding: 10px 22px;
 text-align: center;
+font-family: Lato,sans-serif;
 text-decoration: none;
 display: inline-block;
 font-size: 16px;
@@ -145,6 +146,7 @@ border-radius: 0.5em;
 color: white;
 padding: 10px 22px;
 text-align: center;
+font-family: Lato,sans-serif;
 text-decoration: none;
 display: inline-block;
 font-size: 16px;
