--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,13 @@
+/*
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+*/
 html {
 display: grid;
 min-height: 100%
 }
 body {
 display: grid
+font-family: 'Fira Sans', sans-serif;
 }
 .container {
 position: relative;
