--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ margin: 5em auto;
 padding: 2em;
 letter-spacing: 1px;
 font-family: 'Fira Sans', sans-serif;
+font-size: 1rem;
 }
 footer {
 position: fixed;
