--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,9 @@ display: grid;
 min-height: 100%
 }
 body {
-display: grid
-font-family: 'Fira Sans', sans-serif
-font-size: 1rem;
+display: grid;
+font-family: 'Fira Sans', sans-serif;
+font-size: 1rem
 }
 .container {
 position: relative;
