--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,30 @@ cursor: pointer;
 .red {background-color: #f44336;font-family: 'Fira Sans', sans-serif;} /* Red */
 .gray {background-color: #e7e7e7; color: black;} /* Gray */
 .black {background-color: #555555;} /* Black */
+
+/* Credit */
+.credit {
+  width: 22ch;
+  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
+
 @media (max-width: 700px) {
 .container {
 margin: 0 auto;
