--- a/css/main.css
+++ b/css/main.css
@@ -161,25 +161,24 @@ cursor: pointer;
 
 /* Credit */
 .credit {
-  width: 22ch;
-  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 3px solid;
-  font-family: monospace;
-  font-size: 2em;
+width: 22ch;
+animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+white-space: nowrap;
+overflow: hidden;
+border-right: 3px solid;
+/* font-size: 2em; */
 }
 
 @keyframes typing {
-  from {
-    width: 0
-  }
+from {
+width: 0
+}
 }
     
 @keyframes blink {
-  50% {
-    border-color: transparent
-  }
+50% {
+border-color: transparent
+}
 }
 
 @media (max-width: 700px) {
