--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,10 @@ font-size: 12px;
 letter-spacing: 1px;
 cursor: pointer;
 }
+.red:hover {
+background-color: #e7e7e7;
+color: black;
+}
 .green {background-color: #04AA6D;} /* Green */
 .blue {background-color: #008CBA;} /* Blue */
 .red {background-color: #f44336;font-family: 'Fira Sans', sans-serif;} /* Red */
