--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,24 @@ border-color: transparent
 }
 }
 
+/* Blockquote */
+blockquote {
+  margin: 0;
+}
+
+blockquote p {
+  padding: 15px;
+  background: #eee;
+  border-radius: 5px;
+}
+
+blockquote p::before {
+  content: '\201C';
+}
+
+blockquote p::after {
+  content: '\201D';
+}
 @media (max-width: 700px) {
 .container {
 margin: 0 auto;
