--- a/css/main.css
+++ b/css/main.css
@@ -189,20 +189,37 @@ border-color: transparent
 blockquote {
   margin: 0;
 }
-
 blockquote p {
   padding: 15px;
   background: #eee;
   border-radius: 5px;
 }
-
 blockquote p::before {
   content: '\201C';
 }
-
 blockquote p::after {
   content: '\201D';
 }
+
+/* Line */
+hr {
+  border: none;
+  border-top: 3px double #333;
+  color: #333;
+  overflow: visible;
+  text-align: center;
+  height: 5px;
+}
+
+hr::after {
+  background: #fff;
+  content: '§';
+  padding: 0 4px;
+  position: relative;
+  top: -13px;
+}
+
+
 @media (max-width: 700px) {
 .container {
 margin: 0 auto;
