--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@ text-align: center;
 height: 5px;
 }
 hr::after {
-background: transparent;
+background: #fff;
 content: '\262E';
 padding: 0 4px;
 position: relative;
