--- a/css/default.css
+++ b/css/default.css
@@ -21,8 +21,8 @@ article, footer {
 article {
   margin: 2.5em auto 0 auto;
   padding: 2em;
-  background: #4059ad;
-  color: #eff2f1;
+  background: #fff;
+  color: #black;
   border-radius: 15px;
 }
 
