--- a/css/default.css
+++ b/css/default.css
@@ -9,7 +9,7 @@ body {
   line-height: 1.2em;
 }
 
-article, footer {
+article {
   display: block;
   min-width: 360px;
   max-width: 900px;
@@ -25,6 +25,13 @@ article {
 
 h1 {
   margin-top: 0;
+}
+
+footer {
+  display: block;
+  min-width: 360px;
+  max-width: 900px;
+  width: 80%;
 }
 
 footer {
