--- a/css/default.css
+++ b/css/default.css
@@ -4,6 +4,7 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16.5px;
   line-height: 1.2em;
