--- a/css/default.css
+++ b/css/default.css
@@ -12,9 +12,9 @@ body {
 
 article {
   display: block;
-  min-width: 600px;
+  width: 600px;
   max-width: 700px;
-  width: 100%;
+  width: auto;
 }
 
 article {
