--- a/css/default.css
+++ b/css/default.css
@@ -87,9 +87,9 @@ a:active {
   border-radius: 15px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
 article {
   margin: 2.5em auto 0 auto;
-  min-width: 360px;
+  width: auto;
 }
 }
