--- a/css/default.css
+++ b/css/default.css
@@ -8,6 +8,7 @@ body {
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16.5px;
   line-height: 1.2em;
+  letter-spacing: 1px;
 }
 
 article {
